Update TestHttps.java to use modern HttpClient API
Switched from legacy HttpURLConnection to java.net.http.HttpClient
for better proxy support. Still encountering 401 authentication issues
with the proxy during HTTPS CONNECT tunneling.